  - PBC gamma point ROHF/ROKS and GKS
  - PBC KROHF/KROKS and KGKS for k-point sampling
  - DFT Coulomb and XC integrals with multigrid
  - Periodic UCCSD with k-point sampling
  - perturbative DMRG method
  - Interface to Cornell SHCI
  - PBC dipole memont and Makov-Payne correction
  - Overlap of two CISD wavefunctions
  - EFG and Mossbauer spectroscopy of crystal and molecule
* Improved
  - numint performance (eval_rho, eval_mat)
  - Energy cutoff estimation
  - CCSD convergency for 2D-PBC AFTDF, GDF and MDF methods
  - Integral transformation performance in GW


PySCF 1.5.3 (2018-09-06)
------------------------
* Bugfix
  - get_jk prescreen for non-hermitian density matrices.
  - Inaccurate estimation of memory usage in ccsd rdm.
  - Frozen orbital EA-EOM-KRCCSD
  - IOError due to 4GB chunk size limit in HDF5 library


PySCF 1.5.2 (2018-08-15)
------------------------
* Improved
  - IO performance of pbc.GDF initialization
  - Default linear dependence treatment in GDF to improve accuracy
* Bugfix
  - selected_ci 2-particle density matrices for two electron systems


PySCF 1.5.1 (2018-07-01)
------------------------
* Improved
  - the memory usage for a large number of MM particles (issue #193)
* Bugfix
  - Frozen orbitals in MCSCF canonicalization
  - Dimension error when initializing DF-CCSD integral tensor
  - EOM-EE-UCCSD initial guess and intermediates (issue #199)
  - mpi ip/eaccsd w/ frozen orbitals
  - the tdscf.get_nto function when mol.symmetry is enabled (issue #196)
  - the interface between QMMM wrapper and the gradients of post-HF methods


PySCF 1.5 (2018-06-08)
----------------------
* Added
  - Fake PySCF method adapter for arbitrary energy/gradients function in
    berny_solver wrapper
  - Function to restore DIIS object from DIIS file
  - Restart function to restore CCSD calculations
* Improved
  - CASSCF optimization step size
  - State-averaged CASSCF output message
  - RCCSD(T) and UCCSD(T) performance
  - Reduced DIIS memory footprint