@@ -11,6 +11,7 @@ PySCF 1.6 alpha (2018-09-??)
   - PBC dipole memont and Makov-Payne correction
   - Overlap of two CISD wavefunctions
   - EFG and Mossbauer spectroscopy of crystal and molecule
+  - Molecular magnetizability for HF and DFT
 * Improved
   - numint performance (eval_rho, eval_mat)
   - Energy cutoff estimation
